--- a/src/demo-app/index.html
+++ b/src/demo-app/index.html
@@ -11,5 +11,15 @@
 </head>
 <body>
   <app-root>Loading...</app-root>
+
+  <script src="vendor/core-js/client/core.js"></script>
+  <script src="vendor/systemjs/dist/system.src.js"></script>
+  <script src="vendor/zone.js/dist/zone.js"></script>
+
+  <script>
+    System.import('system-config.js').then(function () {
+      System.import('main');
+    }).catch(console.error.bind(console));
+  </script>
 </body>
 </html>
